# AoC-2023-Solutions

./: README.md
AlexanderGoussas/: .gitignore  aoc.cabal
AlexanderGoussas/app/: Main.hs
AlexanderGoussas/app/Aoc/Year2023/: Day01.hs
AlexanderGoussas/app/Control/Monad/: Aoc.hs
CristopherVilla/: day01.ts
CristopherVilla/day01/: index.ts
DelgadoAdrian/: README.md
TutivenAndy/: dia_ 04.py  dia_01.py  dia_02.py  dia_03.py
