cabal-version:      2.4
name:               aoc
version:            0.1.0.0
synopsis:           Advent of Code in Haskell
-- description:
bug-reports:        https://github.com/aloussase/aoc
license:            MIT
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Alexander Goussas 2023
category:           Algorithms
extra-source-files: README.md

executable aoc
    ghc-options:      -threaded -O2 -Wall -Wno-name-shadowing
    main-is:          Main.hs
    other-modules:    Control.Monad.Aoc
                    , Aoc.Year2023.Day01
    build-depends:    base ^>=4.16.4.0
                    , containers
                    , text
                    , bytestring
                    , vector
                    , psqueues
                    , async
                    , extra
                    , mtl
                    , optparse-applicative
                    , attoparsec
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: 
        OverloadedStrings
      , BangPatterns
      , ScopedTypeVariables
      , TypeApplications
      , RecordWildCards
      , DeriveAnyClass
      , GeneralizedNewtypeDeriving
      , DerivingVia
      , DerivingStrategies
      , KindSignatures
      , MultiParamTypeClasses
      , DataKinds
      , TypeFamilies
      , GADTs
      , FlexibleContexts
      , RankNTypes
